--- a/css-utilities/color/scss/variables.scss
+++ b/css-utilities/color/scss/variables.scss
@@ -32,7 +32,7 @@
         }
     }
 
-    @each $color in lib.map-get(tokens.$color, modifiers) {
+    @each $color in lib.list-join(primary secondary, lib.map-get(tokens.$color, modifiers) {
         &-#{$color} {
             @each $key in lib.map-keys(lib.map-get(tokens.$color, $color)) {
                 --color-#{$key}: var(--color-#{$color}-#{$key});
